@startuml
' Class diagram - Client module (current codebase, grouped)
skinparam classAttributeIconSize 0
left to right direction

package "app/navigation" {
  class Launcher
  class SceneNavigator {
    + loadScene(path, title): void
  }
}

package "network" {
  class ClientConnection <<Singleton>> {
    + connect(): boolean
    + disconnect(): void
    + getSocketClient(): SocketClient
  }

  class SocketClient {
    + connect(): boolean
    + sendMessage(message): Message
    - dispatchIncoming(message): void
  }

  class ClientProtocolHandler {
    + login(username, password): User
    + getAllAuctions(): List<AuctionSession>
    + placeBid(sessionId, bid): boolean
    + banUser(userId): boolean
    + unbanUser(userId): boolean
  }
}

package "state/realtime" {
  class SessionContext {
    + getCurrentUser(): User
    + setCurrentUser(user): void
  }

  class AuctionCache {
    + getActive(): List<AuctionSession>
    + replaceAll(sessions): void
  }

  class RealtimeAuctionBus <<Observer-like>> {
    + register(listener): AutoCloseable
    + dispatch(message): void
  }
}

package "controllers" {
  class LoginController
  class AdminControllers
  class BidderControllers
  class SellerControllers
  class ActionControllers
}

package "ui" {
  class AuctionRowFactory
}

Launcher --> SceneNavigator
LoginController --> ClientProtocolHandler
AdminControllers --> ClientProtocolHandler
BidderControllers --> ClientProtocolHandler
SellerControllers --> ClientProtocolHandler
ActionControllers --> ClientProtocolHandler
ClientProtocolHandler --> ClientConnection
ClientConnection --> SocketClient
SocketClient --> RealtimeAuctionBus : push events
RealtimeAuctionBus --> BidderControllers
RealtimeAuctionBus --> SellerControllers
BidderControllers --> SessionContext
SellerControllers --> SessionContext
BidderControllers --> AuctionCache
SellerControllers --> AuctionCache
BidderControllers --> AuctionRowFactory
SellerControllers --> AuctionRowFactory
@enduml